--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ionic/core": "^4.11.7"
   },
   "devDependencies": {
-    "@stencil/core": "^1.8.4"
+    "@stencil/core": "^1.8.4",
+    "@types/jest": "^25.1.2"
   }
 }
