--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@stencil/core": "^1.8.4",
-    "@types/jest": "^25.1.2"
+    "@types/jest": "^25.1.2",
+    "workbox-build": "4.3.1"
   }
 }
