--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watch",
     "generate": "stencil generate",
-    "build.netlify": "cp _redirects www/_redirects && npm run build"
+    "build.netlify": "mkdir www && cp _redirects www/_redirects && npm run build"
   },
   "dependencies": {
     "@ionic/core": "^5.0.7"
